2001-07-14  Sean MacLennan  <seanm@storm.ca>

	* package-admin.el (package-install-hook): New.
	(package-delete-hook): New.
	(package-admin-add-single-file-package): Use package-delete-hook.

	* package-get.el (package-get): Use package-install-hook.

2001-06-26  Robert Pluim  <rpluim@bigfoot.com>

	* packages.el (locate-library): change to use read-library-name so
	we can get completion

2001-06-26  Robert Pluim  <rpluim@bigfoot.com>

	* package-ui.el (pui-install-selected-packages): reverse the lists
	of packages so that they get handled in the same order as they
	were selected.

2001-06-21  Ben Wing  <ben@xemacs.org>

	* term\AT386.el:
	* term\AT386.el (AT386-keypad-map):
	* term\AT386.el (AT386-keypad-map)): New.
	Fix warnings.

	* term\apollo.el:
	* term\apollo.el ("term/vt100"):
	* term\apollo.el (*dm-mouse-key-bindings-file*): Removed.
	* term\apollo.el (*apollo-key-bindings-hook*): Removed.
	* term\apollo.el (*preempt-display-manager-bindings*): Removed.
	* term\apollo.el (*paste-buffer-directory*): Removed.
	* term\apollo.el (*apollo-mouse-move-point-allow-minibuffer-exit*): Removed.
	* term\apollo.el (*apollo-function-keys*): Removed.
	* term\apollo.el (*apollo-mouse-buttons*): Removed.
	* term\apollo.el (bind-apollo-function-key): Removed.
	* term\apollo.el (unbind-apollo-function-key): Removed.
	* term\apollo.el (select-apollo-meta-key): Removed.
	* term\apollo.el (bind-apollo-mouse-button): Removed.
	* term\apollo.el (unbind-apollo-mouse-button): Removed.
	* term\apollo.el ('apollo-prefix)): Removed.
	* term\apollo.el ('apollo-prefix-1)): Removed.
	* term\apollo.el ('apollo-prefix-2)): Removed.
	* term\apollo.el ('apollo-prefix-3)): Removed.
	* term\apollo.el ('apollo-prefix-4)): Removed.
	* term\apollo.el ('apollo-prefix-5)): Removed.
	* term\apollo.el ('apollo-prefix-6)): Removed.
	* term\apollo.el ('apollo-prefix-7)): Removed.
	* term\apollo.el ('apollo-prefix-8)): Removed.
	* term\apollo.el ('apollo-prefix): Removed.